--- a/Commonfee/src/app/user/home/home.component.html
+++ b/Commonfee/src/app/user/home/home.component.html
@@ -16,11 +16,11 @@
                 <div class="card shadow-sm">
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="/ซ่อมถนนเสร็จ.webp" class="img-fluid rounded-start" alt="ประกาศซ่อมถนนเสร็จ">
+                      <img [src]="'http://localhost:3500/' + Announce.Announce_image" class="img-fluid rounded-start" alt="{{ Announce.Announce_Title }}">
                     </div>
                     <div class="col-md-8">
                       <div class="card-body text-center d-flex flex-column justify-content-center">
-                        <p class="card-text"><small class="text-muted">{{ Announce.Announce_Date }}</small></p>
+                        <p class="card-text"><small class="text-muted">{{ Announce.Announce_Date | date: 'MM/dd/yyyy, hh:mm a'}}</small></p>
                         <h5 class="card-title">{{ Announce.Announce_Title }}</h5>
                         <p class="card-text">{{ Announce.Announce_Detail }}</p>
                       </div>
