--- a/Commonfee/src/app/admin/complain-repair/complain-repair.component.html
+++ b/Commonfee/src/app/admin/complain-repair/complain-repair.component.html
@@ -4,3 +4,27 @@
         <h1>Complain & Repair</h1>
     </div>
 </div>
+<div class="line" [chart]="lineCharts"> </div>
+<div class="report">
+    <h3>ร้องเรียน</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>ชื่อ</th>
+                <th>นามสกุล</th>
+                <th>รายการร้องเรียน</th>
+                <th>ประเภทร้องเรียน</th>
+                <th>สถานะการร้องเรียน</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>สมชาย</td>
+                <td>ชื่นชม</td>
+                <td>ไฟในห้องไม่ติด</td>
+                <td>ร้องเรียนซ่อม</td>
+                <td>ดำเนินการอยู่</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
