--- a/Commonfee/src/app/admin/dashboard/dashboard.component.html
+++ b/Commonfee/src/app/admin/dashboard/dashboard.component.html
@@ -21,13 +21,13 @@
   <div class="col">
       <div class="showdetail">
           <h5>ค้างชำระ</h5>
-          <button type="button" class="btn btn-primary" >แจ้งเตือน</button>
+          <button type="button" class="btn nB" >แจ้งเตือน</button>
       </div>
   </div>
   <div class="col">
       <div class="showdetail">
           <h5>แจ้งข่าวสาร</h5>
-          <button type="button" class="btn btn-primary" (click)="openModal()">ประกาศข่าวสาร</button>
+          <button type="button" class="btn nB" (click)="openModal()">ประกาศข่าวสาร</button>
         </div>
   </div>
 </div>
