--- a/Commonfee/src/app/admin/payment/payment.component.html
+++ b/Commonfee/src/app/admin/payment/payment.component.html
@@ -4,3 +4,117 @@
         <h1>Payment</h1>
     </div>
 </div>
+<div class="history">
+    <div class="row">
+        <div class="col-8">
+            <h4>ประวัติชำระเงินรายบุคคล</h4>
+            <div class="filter">
+                <div class="filtercontrol">
+                    <div class="form">
+                        <label for="month">เดือน </label>
+                        <select name="month" id="month" class="formmonth" >
+                            <option value="1">มกราคม</option>
+                            <option value="2">กุมภาพันธ์</option>
+                            <option value="3">มีนาคม</option>
+                            <option value="4">เมษายน</option>
+                            <option value="5">พฤษภาคม</option>
+                            <option value="6">มิถุนายน</option>
+                            <option value="7">กรกฎาคม</option>
+                            <option value="8">สิงหาคม</option>
+                            <option value="9">กันยายน</option>
+                            <option value="10">ตุลาคม</option>
+                            <option value="11">พฤศจิกายน</option>
+                            <option value="12">ธันวาคม</option>
+                          </select>
+                      </div>
+        </div>
+    </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>ชื่อ</th>
+                    <th>นามสกุล</th>
+                    <th>เลขที่บ้าน</th>
+                    <th>ขนาดบ้าน</th>
+                    <th>จำนวนเงิน</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>อิง</td>
+                    <td>เน่า</td>
+                    <td>123/456</td>
+                    <td>70 ตร.ม</td>
+                    <td>1000.-</td>
+                </tr>
+            </tbody>
+        </table>
+    
+        </div>
+        <div class="col-4">
+        <div class="col">
+            <button type="button" class="btn btn-primary">เพิ่มอัตราชำระ</button>
+        </div>
+        <div class="col">
+            <button type="button" class="btn btn-primary">แก้ไขอัตราชำระ</button>
+        </div>
+        <div class="col">
+            <button type="button" class="btn btn-primary">ส่งใบแจ้งหนี้</button>
+        </div>
+        </div>
+        </div>
+    </div>
+<div class="paid">
+    <div class="row">
+    <div class="col-6">
+        <h4>รายการคนที่ชำระแล้ว</h4>
+    <table>
+        <thead>
+            <tr>
+                <th>ชื่อ</th>
+                <th>นามสกุล</th>
+                <th>เลขที่บ้าน</th>
+                <th>ขนาดบ้าน</th>
+                <th>จำนวนเงิน</th>
+                <th>สถานะการจ่าย</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>ใจบุญ</td>
+                <td>เมตตา</td>
+                <td>698/789</td>
+                <td>40 ตร.ม</td>
+                <td>800.-</td>
+                <td>จ่ายแล้ว</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<div class="col-6">
+    <h4>รายการคนที่ค้างชำระ</h4>
+    <table>
+        <thead>
+            <tr>
+                <th>ชื่อ</th>
+                <th>นามสกุล</th>
+                <th>เลขที่บ้าน</th>
+                <th>ขนาดบ้าน</th>
+                <th>จำนวนเงิน</th>
+                <th>สถานะการจ่าย</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>ใจบุญ</td>
+                <td>เมตตา</td>
+                <td>698/789</td>
+                <td>40 ตร.ม</td>
+                <td>800.-</td>
+                <td>ค้างชำระ</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+</div>
+</div>
