--- a/Commonfee/src/app/admin/complain-repair/complain-repair.component.css
+++ b/Commonfee/src/app/admin/complain-repair/complain-repair.component.css
@@ -11,6 +11,7 @@
     margin: 20px auto; /* จัดกึ่งกลางและให้มีระยะห่างรอบ */
     padding: 20px;
     margin-left: 50px;
+    text-align: center;
 }
 th, td {
     padding: 10px;
@@ -22,10 +23,10 @@ table {
     width: 70%;
     border-collapse: collapse;
     font-family: "Noto Sans Thai", sans-serif;
+
 }
 .line{
     width: 90%;
     margin-left: 50px;
     box-shadow: 5px 5px 10px rgba(38, 0, 255, 0.312);
-
 }
