--- a/Commonfee/src/app/admin/dashboard/dashboard.component.html
+++ b/Commonfee/src/app/admin/dashboard/dashboard.component.html
@@ -45,18 +45,18 @@
         <div class="road">ถนนหลัก</div>
       </div>
       <div class="house-row">
-        <div class="house one" [attr.title]="getResidentInfo(1)">1</div>
-        <div class="house two" [attr.title]="getResidentInfo(2)">2</div>
-        <div class="house three" [attr.title]="getResidentInfo(3)">3</div>
-        <div class="house four" [attr.title]="getResidentInfo(4)">4</div>
-        <div class="house five" [attr.title]="getResidentInfo(5)">5</div>
-        <div class="house six" [attr.title]="getResidentInfo(6)">6</div>
-        <div class="house seven" [attr.title]="getResidentInfo(7)">7</div>
-        <div class="house eight" [attr.title]="getResidentInfo(8)">8</div>
-        <div class="house nine" [attr.title]="getResidentInfo(9)">9</div>
-        <div class="house ten" [attr.title]="getResidentInfo(10)">10</div>
-        <div class="house eleven" [attr.title]="getResidentInfo(11)">11</div>
-        <div class="house twelve" [attr.title]="getResidentInfo(12)">12</div>
+        <div class="house one" [ngStyle]="{'background-color': getHouseColor(1)}" [attr.title]="getResidentInfo(1)">1</div>
+        <div class="house two" [ngStyle]="{'background-color': getHouseColor(2)}" [attr.title]="getResidentInfo(2)">2</div>
+        <div class="house three" [ngStyle]="{'background-color': getHouseColor(3)}" [attr.title]="getResidentInfo(3)">3</div>
+        <div class="house four" [ngStyle]="{'background-color': getHouseColor(4)}" [attr.title]="getResidentInfo(4)">4</div>
+        <div class="house five" [ngStyle]="{'background-color': getHouseColor(5)}" [attr.title]="getResidentInfo(5)">5</div>
+        <div class="house six" [ngStyle]="{'background-color': getHouseColor(6)}" [attr.title]="getResidentInfo(6)">6</div>
+        <div class="house seven" [ngStyle]="{'background-color': getHouseColor(7)}" [attr.title]="getResidentInfo(7)">7</div>
+        <div class="house eight" [ngStyle]="{'background-color': getHouseColor(8)}" [attr.title]="getResidentInfo(8)">8</div>
+        <div class="house nine" [ngStyle]="{'background-color': getHouseColor(9)}" [attr.title]="getResidentInfo(9)">9</div>
+        <div class="house ten" [ngStyle]="{'background-color': getHouseColor(10)}" [attr.title]="getResidentInfo(10)">10</div>
+        <div class="house eleven" [ngStyle]="{'background-color': getHouseColor(11)}" [attr.title]="getResidentInfo(11)">11</div>
+        <div class="house twelve" [ngStyle]="{'background-color': getHouseColor(12)}" [attr.title]="getResidentInfo(12)">12</div>
       </div>
   
       <div class="roadNew">
@@ -64,43 +64,43 @@
       </div>
   
       <div class="house-row">
-        <div class="house thirteen" [attr.title]="getResidentInfo(13)">13</div>
-        <div class="house fourteen" [attr.title]="getResidentInfo(14)">14</div>
-        <div class="house fifteen" [attr.title]="getResidentInfo(15)">15</div>
-        <div class="house sixteen" [attr.title]="getResidentInfo(16)">16</div>
-        <div class="house seventeen" [attr.title]="getResidentInfo(17)">17</div>
-        <div class="house eighteen" [attr.title]="getResidentInfo(18)">18</div>
-        <div class="house nineteen" [attr.title]="getResidentInfo(19)">19</div>
-        <div class="house twenty" [attr.title]="getResidentInfo(20)">20</div>
-        <div class="house twenty-one" [attr.title]="getResidentInfo(21)">21</div>
-        <div class="house twenty-two" [attr.title]="getResidentInfo(22)">22</div>
-        <div class="house twenty-three" [attr.title]="getResidentInfo(23)">23</div>
-        <div class="house twenty-four" [attr.title]="getResidentInfo(24)">24</div>
+        <div class="house thirteen" [ngStyle]="{'background-color': getHouseColor(13)}" [attr.title]="getResidentInfo(13)">13</div>
+        <div class="house fourteen" [ngStyle]="{'background-color': getHouseColor(14)}" [attr.title]="getResidentInfo(14)">14</div>
+        <div class="house fifteen" [ngStyle]="{'background-color': getHouseColor(15)}" [attr.title]="getResidentInfo(15)">15</div>
+        <div class="house sixteen" [ngStyle]="{'background-color': getHouseColor(16)}" [attr.title]="getResidentInfo(16)">16</div>
+        <div class="house seventeen" [ngStyle]="{'background-color': getHouseColor(17)}" [attr.title]="getResidentInfo(17)">17</div>
+        <div class="house eighteen" [ngStyle]="{'background-color': getHouseColor(18)}" [attr.title]="getResidentInfo(18)">18</div>
+        <div class="house nineteen" [ngStyle]="{'background-color': getHouseColor(19)}" [attr.title]="getResidentInfo(19)">19</div>
+        <div class="house twenty" [ngStyle]="{'background-color': getHouseColor(20)}" [attr.title]="getResidentInfo(20)">20</div>
+        <div class="house twenty-one" [ngStyle]="{'background-color': getHouseColor(21)}" [attr.title]="getResidentInfo(21)">21</div>
+        <div class="house twenty-two" [ngStyle]="{'background-color': getHouseColor(22)}" [attr.title]="getResidentInfo(22)">22</div>
+        <div class="house twenty-three" [ngStyle]="{'background-color': getHouseColor(23)}" [attr.title]="getResidentInfo(23)">23</div>
+        <div class="house twenty-four" [ngStyle]="{'background-color': getHouseColor(24)}" [attr.title]="getResidentInfo(24)">24</div>
         <div class="new-row"></div> <!-- ขึ้นบรรทัดใหม่ที่นี่ -->
-        <div class="house twenty-five" [attr.title]="getResidentInfo(25)">25</div>
-        <div class="house twenty-six" [attr.title]="getResidentInfo(26)">26</div>
-        <div class="house twenty-seven" [attr.title]="getResidentInfo(27)">27</div>
-        <div class="house twenty-eight" [attr.title]="getResidentInfo(28)">28</div>
-        <div class="house twenty-nine" [attr.title]="getResidentInfo(29)">29</div>
-        <div class="house thirty" [attr.title]="getResidentInfo(30)">30</div>
-        <div class="house thirty-one" [attr.title]="getResidentInfo(31)">31</div>
-        <div class="house thirty-two" [attr.title]="getResidentInfo(32)">32</div>
-        <div class="house thirty-three" [attr.title]="getResidentInfo(33)">33</div>
-        <div class="house thirty-four" [attr.title]="getResidentInfo(34)">34</div>
-        <div class="house thirty-five" [attr.title]="getResidentInfo(35)">35</div>
-        <div class="house thirty-six" [attr.title]="getResidentInfo(36)">36</div>
+        <div class="house twenty-five" [ngStyle]="{'background-color': getHouseColor(25)}" [attr.title]="getResidentInfo(25)">25</div>
+        <div class="house twenty-six" [ngStyle]="{'background-color': getHouseColor(26)}" [attr.title]="getResidentInfo(26)">26</div>
+        <div class="house twenty-seven" [ngStyle]="{'background-color': getHouseColor(27)}" [attr.title]="getResidentInfo(27)">27</div>
+        <div class="house twenty-eight" [ngStyle]="{'background-color': getHouseColor(28)}" [attr.title]="getResidentInfo(28)">28</div>
+        <div class="house twenty-nine" [ngStyle]="{'background-color': getHouseColor(29)}" [attr.title]="getResidentInfo(29)">29</div>
+        <div class="house thirty" [ngStyle]="{'background-color': getHouseColor(30)}" [attr.title]="getResidentInfo(30)">30</div>
+        <div class="house thirty-one" [ngStyle]="{'background-color': getHouseColor(31)}" [attr.title]="getResidentInfo(31)">31</div>
+        <div class="house thirty-two" [ngStyle]="{'background-color': getHouseColor(32)}" [attr.title]="getResidentInfo(32)">32</div>
+        <div class="house thirty-three" [ngStyle]="{'background-color': getHouseColor(33)}" [attr.title]="getResidentInfo(33)">33</div>
+        <div class="house thirty-four" [ngStyle]="{'background-color': getHouseColor(34)}" [attr.title]="getResidentInfo(34)">34</div>
+        <div class="house thirty-five" [ngStyle]="{'background-color': getHouseColor(35)}" [attr.title]="getResidentInfo(35)">35</div>
+        <div class="house thirty-six" [ngStyle]="{'background-color': getHouseColor(36)}" [attr.title]="getResidentInfo(36)">36</div>
       </div>
   
       <div class="roadNew">
         <div class="road">ถนน B</div>
       </div>
       <div class="house-row">
-        <div class="house thirty-seven" [attr.title]="getResidentInfo(37)">37</div>
-        <div class="house thirty-eight" [attr.title]="getResidentInfo(38)">38</div>
-        <div class="house thirty-nine" [attr.title]="getResidentInfo(39)">39</div>
-        <div class="house forty" [attr.title]="getResidentInfo(40)">40</div>
-        <div class="house forty-one" [attr.title]="getResidentInfo(41)">41</div>
-        <div class="house forty-two" [attr.title]="getResidentInfo(42)">42</div>
+        <div class="house thirty-seven" [ngStyle]="{'background-color': getHouseColor(37)}" [attr.title]="getResidentInfo(37)">37</div>
+            <div class="house thirty-eight" [ngStyle]="{'background-color': getHouseColor(38)}" [attr.title]="getResidentInfo(38)">38</div>
+            <div class="house thirty-nine" [ngStyle]="{'background-color': getHouseColor(39)}" [attr.title]="getResidentInfo(39)">39</div>
+            <div class="house forty" [ngStyle]="{'background-color': getHouseColor(40)}" [attr.title]="getResidentInfo(40)">40</div>
+            <div class="house forty-one" [ngStyle]="{'background-color': getHouseColor(41)}" [attr.title]="getResidentInfo(41)">41</div>
+            <div class="house forty-two" [ngStyle]="{'background-color': getHouseColor(42)}" [attr.title]="getResidentInfo(42)">42</div>
       </div>
     </div>
   </div>
