--- a/Commonfee/src/app/user/history-booking/history-booking.component.html
+++ b/Commonfee/src/app/user/history-booking/history-booking.component.html
@@ -1,6 +1,6 @@
 <app-side-service></app-side-service>
 <div class="booking-history">
-    <h1>ประวัติการจองฟิตเนส</h1>
+    <h1>ประวัติการจอง</h1>
   
     <table>
       <thead>
