--- a/Commonfee/src/app/admin/complain-repair/complain-repair.component.css
+++ b/Commonfee/src/app/admin/complain-repair/complain-repair.component.css
@@ -26,7 +26,9 @@ table {
 
 }
 .line{
-    width: 90%;
-    margin-left: 50px;
+    margin-top: 20px;
+    max-width: 1200px;
+    width: 100%;
+    margin-left: 40px;
     box-shadow: 5px 5px 10px rgba(38, 0, 255, 0.312);
 }
