--- a/Commonfee/src/app/admin/complain-repair/complain-repair.component.html
+++ b/Commonfee/src/app/admin/complain-repair/complain-repair.component.html
@@ -2,6 +2,7 @@
 <div class="container">
     <div class="header">
         <h1>Complain & Repair</h1>
+        <img src="line.png" alt="error" width="200">
     </div>
 </div>
 <div class="line" [chart]="lineCharts"> </div>
