--- a/Commonfee/src/app/admin/dashboard/dashboard.component.html
+++ b/Commonfee/src/app/admin/dashboard/dashboard.component.html
@@ -2,6 +2,7 @@
 <div class="container">
   <div class="header">
       <h1>dashboard</h1>
+      <img src="line.png" alt="error" width="200">
   </div>
 </div>
 <!-- แสดงเงินเข้า -->
