--- a/Commonfee/src/app/admin/resident-list/resident-list.component.html
+++ b/Commonfee/src/app/admin/resident-list/resident-list.component.html
@@ -2,6 +2,7 @@
 <div class="container">
     <div class="header">
         <h1>Resident List</h1>
+        <img src="line.png" alt="error" width="200">
     </div>
 </div>
 <!-- <div class="resident">
