--- a/Commonfee/src/app/admin/resident-list/resident-list.component.html
+++ b/Commonfee/src/app/admin/resident-list/resident-list.component.html
@@ -75,6 +75,18 @@
                   maxlength="50" 
                 />
               </div>
+
+              <div class="form-group">
+                <label for="username">ชื่อผู้ใช้ :</label>
+                <input
+                  type="text"
+                  id="username"
+                  formControlName="username"
+                  class="form-control"
+                  placeholder="กรอกชื่อผู้ใช้"
+                  maxlength="50" 
+                />
+              </div>
               
               <div class="form-group">
                 <label for="IDcard">เลขบัตรประชาชน:</label>
