--- a/Commonfee/src/app/user/register/register.component.html
+++ b/Commonfee/src/app/user/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="form-container">
+<!-- <div class="form-container">
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="needs-validation" novalidate>
     <h3 style="text-align: center;color: #fff">ลงทะเบียน</h3>
     <hr style="border-width: 3px; border-color: white">
@@ -185,4 +185,4 @@
     <button type="submit" class="btn">ลงทะเบียน</button>
     <div class="text-center pt-4 ">คุณลงทะเบียนแล้วแล้วใช่ไหม? <a id="forget" routerLink="/login">เข้าสู่ระบบลูกบ้าน</a></div>
   </form>
-</div>
+</div> -->
