--- a/Commonfee/src/app/user/purchase/purchase.component.css
+++ b/Commonfee/src/app/user/purchase/purchase.component.css
@@ -63,4 +63,11 @@ a{
   text-decoration: none;
   color: black; /*เดี๋ยวกลับมาแก้*/
 }
-
+.Overdue{
+     color: red;
+    font-weight: bold;
+}
+.Paid{
+  color: green;
+    font-weight: bold;
+}
