--- a/Commonfee/src/app/user/status/status.component.css
+++ b/Commonfee/src/app/user/status/status.component.css
@@ -57,8 +57,8 @@
     font-weight: bold;
   }
   
-  .unfinish {
-    color: red;
+  .ongoing {
+    color: orange;
     font-weight: bold;
   }
   
